[package]
name = "image-to-ascii-rukarangi"
version = "0.1.4"
authors = ["Luke Thompson <luke@yorkbay.net.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.70"
inflate = "0.4.5"
wee_alloc = { version = "0.4.5", optional = true }
